--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,7 +1,12 @@
+/**/
+
+* {
+    box-sizing: border-box;
+}
+
 body {
-    margin: 0;
     background: #181818;
-    color: black;
+    color: #fff;
     line-height: 1.6;
     font-family: 'Quicksand', sans-serif;
     padding: 0 1.5em;
@@ -12,7 +17,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(128, 118, 118);
     top: 0;
     width: 100%;
 }
@@ -30,233 +35,101 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #111;
+    background-color: rgb(184, 226, 164);
 }
 
 .active {
     background-color: #4CAF50;
 }
 
-.div-imagen {
-    display: inline-block;
-    position: relative;
-    margin: 10px;
+.contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
 }
 
-.card {
-    float: left;
-    margin: 50px auto;
-    position: relative;
+.contact-wrapper>* {
+    padding: 1em;
 }
 
-section {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
+.contact-form {
+    background: #222222;
 }
 
-
-/* FORMULARIO =================================== */
-
-.form_wrap {
-    width: 1050px;
-    height: 530px;
-    margin: 50px auto;
-    display: flex;
-    background: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
-
-/* Informacion de Contacto*/
-
-.cantact_info::before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #4091EC;
-    opacity: 0.9;
-}
-
-.cantact_info {
-    width: 38%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: url('../fondo.jpg');
-    background-size: cover;
-    background-position: center center;
-}
-
-.info_title,
-.info_items {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-}
-
-.info_title {
-    margin-bottom: 60px;
-}
-
-.info_title span {
-    font-size: 100px;
+.contact-form form label {
     display: block;
-    text-align: center;
-    margin-bottom: 15px;
 }
 
-.info_title h2 {
-    font-size: 35px;
-    text-align: center;
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
 }
 
-.info_items p {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 10px;
+.contact-form form .block {
+    grid-column: 1 / 3;
 }
 
-.info_items p:nth-child(1) span {
-    font-size: 30px;
-    margin-right: 10px;
-}
-
-.info_items p:nth-child(2) span {
-    font-size: 50px;
-    margin-right: 15px;
-    margin-left: 4px;
-}
-
-
-/* Formulario de contacto*/
-
-form.form_contact {
-    width: 62%;
-    padding: 30px 40px;
-}
-
-form.form_contact h2 {
-    font-size: 25px;
-    font-weight: 600;
-    color: #303030;
-    margin-bottom: 30px;
-}
-
-form.form_contact .user_info {
-    display: flex;
-    flex-direction: column;
-}
-
-form.form_contact label {
-    font-weight: 600;
-}
-
-form.form_contact input,
-form.form_contact textarea {
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
     width: 100%;
-    padding: 8px 0px 5px;
-    margin-bottom: 20px;
+    padding: .7em;
     border: none;
-    border-bottom: 2px solid #D1D1D1;
-    font-family: 'Open sans';
-    color: #5A5A5A;
-    font-size: 14px;
-    font-weight: 400;
-}
-
-form.form_contact textarea {
-    max-width: 100%;
-    min-width: 100%;
-    max-height: 90px;
-}
-
-form.form_contact input[type="button"] {
-    width: 180px;
-    background: #4091EC;
-    padding: 10px;
-    border: none;
-    border-radius: 25px;
-    align-self: flex-end;
+    background: none;
+    outline: 0;
     color: #fff;
-    font-family: 'Open sans';
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
+    border-bottom: 1px solid #20e019;
 }
 
-form.form_contact input[type="button"]:hover {
-    background: #3371B6;
+.contact-form form button {
+    background: rgb(25, 218, 18);
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: #d63031;
+    color: #fff;
+    transition: background-color 1s ease-out;
+    outline: 0;
 }
 
 
-/* Ventana de errores*/
+/* CONTACT INFO */
 
-.modal_wrap {
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.contact-info {
+    background: #000;
 }
 
-.mensaje_modal {
-    background: #fff;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-    width: 400px;
-    padding: 30px 20px 15px;
-}
-
-.mensaje_modal h3 {
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
     text-align: center;
-    font-family: 'Ubuntu';
-    font-size: 20px;
-    font-weight: 400;
+    margin: 0 0 1rem 0;
 }
 
-.mensaje_modal h3:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 1px;
-    background: #C5C5C5;
-    margin: 10px 0px 15px;
-}
 
-.mensaje_modal p {
-    font-size: 16px;
-    color: #606060;
-}
+/* LARGE SIZE */
 
-.mensaje_modal p:before {
-    content: "\f00d";
-    font-family: FontAwesome;
-    display: inline-block;
-    color: #E25151;
-    margin-right: 8px;
-}
-
-#btnClose {
-    display: inline-block;
-    padding: 3px 10px;
-    margin-top: 10px;
-    background: #E25151;
-    color: #fff;
-    border: 2px solid #B14141;
-    cursor: pointer;
-    float: right;
+@media(min-width: 700px) {
+    body {
+        padding: 0 4em;
+    }
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper>* {
+        padding: 2em;
+    }
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        text-align: left;
+    }
 }
