--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/*En este archivo esta el css y las transiciones en las paginas las animaciones utilice una librer
+en la cual da muchas ventajas que solo debemos de llamar su funcionalidad por medio de clases.*/
+
 body {
     margin: 0;
     background: #181818;
@@ -12,7 +15,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(128, 118, 118);
     top: 0;
     width: 100%;
 }
@@ -30,7 +33,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #111;
+    background-color: rgb(184, 226, 164);
 }
 
 .active {
@@ -56,6 +59,7 @@ li a:hover:not(.active) {
     z-index: -1;
     padding: 10px;
     margin: 0;
+    width: 27vw;
 }
 
 .desvanecer:hover {
@@ -80,6 +84,12 @@ li a:hover:not(.active) {
     cursor: pointer;
 }
 
+.button1:hover {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+}
+
 .ver {
     background-color: palegreen;
     border: none;
@@ -94,15 +104,22 @@ li a:hover:not(.active) {
     text-decoration: none;
 }
 
+.ver:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
 section {
     height: 100vh;
     display: flex;
     justify-content: center;
 }
 
+img {
+    width: 28vw;
+}
 
-/*img {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    width: 30vw;
-}*/
+img:hover {
+    border-radius: 50%;
+}
