--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,5 +1,3 @@
-/**/
-
 * {
     box-sizing: border-box;
 }
@@ -11,6 +9,9 @@ body {
     font-family: 'Quicksand', sans-serif;
     padding: 0 1.5em;
 }
+
+
+/* esta lista es el disenio de el menu de navegacion*/
 
 ul {
     list-style-type: none;
@@ -100,7 +101,7 @@ li a:hover:not(.active) {
 }
 
 
-/* CONTACT INFO */
+/* desenio del contacto de informacion*/
 
 .contact-info {
     background: #000;
@@ -114,7 +115,7 @@ li a:hover:not(.active) {
 }
 
 
-/* LARGE SIZE */
+/* esto es lo que hara cuando el formulario lo hagamos pequenio*/
 
 @media(min-width: 700px) {
     body {
