--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,9 @@ li a:hover:not(.active) {
     width: 27vw;
 }
 
+
+/*Disenio de transicion */
+
 .desvanecer:hover {
     opacity: 0.07;
     -webkit-transition: opacity 500ms;
@@ -84,6 +87,9 @@ li a:hover:not(.active) {
     cursor: pointer;
 }
 
+
+/*Transicion en los botones*/
+
 .button1:hover {
     -webkit-transform: scale(0.8);
     -ms-transform: scale(0.8);
@@ -104,6 +110,9 @@ li a:hover:not(.active) {
     text-decoration: none;
 }
 
+
+/*Desenio de transicion  pasar el cursor*/
+
 .ver:hover {
     -webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
@@ -119,6 +128,9 @@ section {
 img {
     width: 28vw;
 }
+
+
+/*Transicion en las imagenes hare un border cuando el cursos este sobre ella*/
 
 img:hover {
     border-radius: 50%;
