--- a/estilo.scss
+++ b/estilo.scss
@@ -1,3 +1,5 @@
+/*Declaracion de variables de colores,borde y el tipo de letra que usara el formulario*/
+
 $primary: #303f9f;
 $light-primary: #bbdefb;
 $white: #f2f2f2;
@@ -28,6 +30,12 @@ html {
     padding: 40px;
     width: 90%;
 }
+
+
+/*Aca tenemos el contener del formulario alquiler,
+declaramos varibales los tipos de input tambien anadimos los colores que vera el 
+usuario en caso de que no agregamos correctamente los datos.
+*/
 
 .contendor-formulario {
     color: $white;
