comentario de las funciones

--- a/estilo.scss
+++ b/estilo.scss
@@ -1,4 +1,6 @@
-/*Declaracion de variables de colores,borde y el tipo de letra que usara el formulario*/
+/*Declaracion de variables de colores,borde y el tipo de letra que usara el formulario mediante funciones
+Tambien agregamos funciones con numeros
+*/
 
 $primary: #303f9f;
 $light-primary: #bbdefb;
